refactor: create pages folder to store pages files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MyPersonal.App",
+  "name": "MyPersonal.App training workout",
   "icons": [
     {
       "src": "favicon.ico",
